# Madecentro_gestor_documental

./: .env.example  .gitignore  Madecentro Gestor Documental.spec  README.md  README_GENERADOR_PLANTILLAS.md  main.py  pyproject.toml  requirements.txt
app/core/: settings.py
app/database/: database_service.py
app/models/: import_models.py  schemas.py
app/plantilla_generator/: __init__.py  dictionary_loader.py  excel_cleaner.py  generator.py  pdf_cleaner.py  replacements.py  report_writer.py  word_cleaner.py
app/services/: ai_mapping_service.py  bulk_template_import_service.py  customer_catalog_service.py  document_identity_service.py  excel_fill_service.py  excel_signature_service.py  excel_template_service.py  field_dictionary_service.py  form_import_service.py  form_template_service.py  mapping_service.py  marker_template_service.py  pdf_field_service.py  pdf_fill_service.py  pdf_signature_service.py  word_signature_service.py  word_template_service.py
app/ui/: import_preview_dialog.py  main_window.py  pdf_learning_dialog.py  theme.py
assets/logo/: README.txt
data/entrada/: ACF diligenciado.xlsx
scripts/: generar_plantillas.py
tests/: test_bulk_template_import_service.py  test_customer_catalog_service.py  test_database_service.py  test_document_identity_service.py  test_excel_services.py  test_form_import_service.py  test_form_template_service.py  test_mapping_service.py  test_marker_template_service.py  test_models.py  test_pdf_services.py  test_template_generator.py
tools/: bulk_import_templates.py  excel_workflow.py  test_openai.py
(+12 files in other folders)
