[project]
name = "madecentro-autofill-agent"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.7,<7",
    "PyMuPDF>=1.24,<2",
    "openpyxl>=3.1,<4",
    "lxml>=5.0,<7",
    "python-dotenv>=1.0,<2",
    "pydantic>=2.7,<3",
    "Pillow>=10,<12",
    "python-docx>=1.1,<2",
    "pandas>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1,<2",
]

[tool.pyright]
include = ["app", "main.py"]
typeCheckingMode = "basic"
